Ignoring .vscode dir

--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "The BlackB1RD-Development developers working environment",
   "keywords": [
     "blackb1rd",
-    "blackb1rd-development",
-    "blackb1rd",
     "development",
+    "blackb1rd-development",
+    "blackb1rd development",
+    "working",
     "env",
-    "work",
+    "environment",
     "working-env",
-    "environment"
+    "working env",
+    "working-environment",
+    "working environment"
   ],
   "homepage": "https://github.com/BlackB1RD-Development/working-env#readme",
   "license": "MIT",
